package tp3;

public class PizzaFromageStyleStrasbourg extends PizzaFromage {
	public PizzaFromageStyleStrasbourg(){
		this.nom = "pizza au Fromage de Strasbourg";
	}

}
