package tp3;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaGrecqueStyleBrest extends PizzaGrecque {
	public PizzaGrecqueStyleBrest() {
		this.nom = "pizza grecque de Brest";
	}

}
