package tp3;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaGrecqueStyleStrasbourg extends PizzaGrecque {
	public PizzaGrecqueStyleStrasbourg() {
		this.nom = "pizza grecque de Strasbourg";
	}
}
