@startuml

class FactoryPizzaBrest {
  creerPizza(String) : Pizza
}

class FactoryPizzaStrasbourg {
  creerPizza(String) : Pizza
}

abstract class FactoryPizzas {
  creerPizza(String) : Pizza
}

class Main

abstract class Pizza {
  nom : String
  pate : String
  sauce : String
  garniture : ArrayList
  couper()
  cuire()
  emballer()
  preparer()
}

class PizzaFromage

class PizzaFromageStyleBrest

class PizzaFromageStyleStrasbourg

class PizzaGrecque

class PizzaGrecqueStyleBrest

class PizzaGrecqueStyleStrasbourg

class PizzaPoivrons

class PizzaPoivronsStyleBrest

class PizzaPoivronsStyleStrasbourg

abstract class Pizzeria {
  lafactory : FactoryPizzas
  commanderPizza(String) : Pizza
}

class PizzeriaBrest

class PizzeriaStrasbourg

FactoryPizzaBrest --> Pizza : use
FactoryPizzaStrasbourg --> Pizza : use
FactoryPizzas <|-- FactoryPizzaBrest
FactoryPizzas <|-- FactoryPizzaStrasbourg
FactoryPizzas --> Pizza : use
PizzaFromage <|-- PizzaFromageStyleBrest
PizzaFromage <|-- PizzaFromageStyleStrasbourg
PizzaGrecque <|-- PizzaGrecqueStyleBrest
PizzaGrecque <|-- PizzaGrecqueStyleStrasbourg
Pizza <|-- PizzaFromage
Pizza <|-- PizzaGrecque
Pizza <|-- PizzaPoivrons
PizzaPoivrons <|-- PizzaPoivronsStyleBrest
PizzaPoivrons <|-- PizzaPoivronsStyleStrasbourg
Pizzeria --> "1" FactoryPizzas : lafactory
Pizzeria --> Pizza : use
Pizzeria <|-- PizzeriaBrest
Pizzeria <|-- PizzeriaStrasbourg

@enduml
